Bug 55030 - Wrong type in calloc in brw_state_cache.c::brw_init_caches
Summary: Wrong type in calloc in brw_state_cache.c::brw_init_caches
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 8.0
Hardware: Other All
: medium normal
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-17 18:54 UTC by szunti
Modified: 2012-11-04 20:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch showing the wrong type (609 bytes, patch)
2012-09-17 18:54 UTC, szunti
Details | Splinter Review

Description szunti 2012-09-17 18:54:32 UTC
Created attachment 67294 [details] [review]
patch showing the wrong type

Found reading the code.
Comment 1 Eric Anholt 2012-10-31 20:12:09 UTC
What name should I use for the author of the change?
Comment 2 szunti 2012-11-02 13:16:10 UTC
I don't care. If it is needed to blame someone you could use Szunti, if you need a real name, then Vandrus Zoltán.
Comment 3 Eric Anholt 2012-11-04 20:25:00 UTC
Thanks!

commit 5ac46da58893e06b48071358a9070408e11e14cf
Author: Vandrus Zoltán <szunti@gmail.com>
Date:   Wed Oct 31 13:11:45 2012 -0700

    i965: Fix oversized initial allocation of the state cache table pointers.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55030


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.