i965: Fix oversized initial allocation of the state cache table pointers.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55030